--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create an article</h1>
 
+<% if @article.errors.any? %>
+<h2>The following errors occured when creating the article</h2>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ul>
+<% end %>
+
 <%= form_for @article do |f| %>
   <h4> 
     Tên article
@@ -8,7 +17,9 @@
     <%= f.text_field :title %>
   </p>
   <p>
-      <%= f.label : %> <br/>
+      <%= f.label :description %> <br/>
       <%= f.text_field :description %>
   </p>
+  
+  <p> <%= f.submit %> </p>
 <% end %>
