style for partial

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,14 +6,14 @@ $nav-default-bg: black;
 #logo {
     float: left;
     font-size: 1.7em;
-    color: #000;
+    color: #fff;
     text-transform: uppercase;
     letter-spacing: -1px;
     font-weight: bold;
 }
 
 #logo:hover {
-    color: #f0f;
+    color: #fff;
     text-decoration: none;
 }
 
