--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,18 +7,33 @@
 </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-  <p>
-      <%= f.label :title %> <br/>
-      <%= f.text_field :title %>
-  </p>
-  <p>
-      <%= f.label :description %> <br/>
-      <%= f.text_field :description %>
-  </p>
-  
-  <p> <%= f.submit %> </p>
-<% end %>
-
-
-<%= link_to "Back to articles listing", articles_path %>
+<div class="row">
+  <div class="col-md-12">
+    <%= form_for @article do |f| %>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label">
+          <%= f.label :title %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label">
+          <%= f.label :description %> <br/>
+          </div>
+        <div class="col-sm-8">
+          <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-10 offset-sm-2">
+          <%= f.submit class: "btn btn-primary btn-lg" %>
+        </div>
+      </div>
+    <% end %>
+    <div class='col-4 offset-4'>
+      [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+    </div>
+  </div>
+</div>
