--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,3 +68,14 @@ footer ul li {
     float: left;
     margin-left: 15px;
 }
+
+
+.articles-actions{
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
