--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,15 @@
-<h1>Showing selected article</h1>
+<h2 align='center'>Title: <%= @article.title %></h2>
 
-<p>Title: <%= @article.title %></p>
+<div class='card col-8 offset-2'>
+    <h4 class='center description'><strong>Description</strong></h4>
+    <hr>
 
-<p>
-    Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to articles listing", articles_path %>
+    <%= simple_format(@article.description) %>
+    <div class='articles-actions'>
+        <%= link_to "Edit this article", edit_article_path(@article), class: 'btn btn-primary btn-xs' %>
+        <%= link_to "Delete this article", article_path(@article), method: :delete, 
+                                        data: {confirm: "Are you sure you want to delete the article?"}, 
+                                        class: 'btn btn-xs btn-danger' %>
+        <%= link_to "View all articles", articles_path, class: 'btn btn-xs btn-success' %>
+    </div>
+</div>
