--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,3 +79,14 @@ footer ul li {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+.article-title {
+   font-weight: bold;
+   font-size: 1.5em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
