--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,32 @@ $nav-default-bg: black;
     font-weight: bold;
 }
 
+.articles-actions{
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.article-title {
+   font-weight: bold;
+   font-size: 1.5em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
+
 .btn-xlarge {
     font-size: 1.7em;
     background-color: black;
@@ -70,23 +96,3 @@ footer ul li {
 }
 
 
-.articles-actions{
-    border-top: 1px solid #eaeaea;
-    padding-top: 5px;
-}
-
-.description {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.article-title {
-   font-weight: bold;
-   font-size: 1.5em;
-}
-
-.article-body {
-    border-top: 1px solid #eaeaea;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
