--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,23 @@
 <h2 align='center'>Title: <%= @article.title %></h2>
 
 <div class='card col-8 offset-2'>
+    <% if @article.user %>
+        <ul class='listing'>
+              <div class='row center'>
+                  <div class='col-4 offset-4'>
+                      <li>Created by:</li>
+                      <li>
+                          <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+                      </li>
+                      <li>
+                          <%= link_to @article.user.username, user_path(@article.user) %>
+                      </li>
+                      <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+                      </small></li>
+                  </div>
+              </div>
+        </ul>
+    <% end %>
     <h4 class='center description'><strong>Description</strong></h4>
     <hr>
 
