Update styling for paginate

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,6 +76,10 @@ $nav-default-bg: black;
     
 }
 
+.pagination ul li {
+    padding-right: 5px;
+}
+
 .footer {
     margin-top: 45px;
     padding-top: 5px;
