--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <h1 align='center'>Listing all articles</h1>
 
-<div align="center">
-    <%= will_paginate %>
+<div class="d-flex justify-content-center">
+  <%= will_paginate %>
 </div>
 <%= render 'article', obj: @articles %>
-<div align="center">
-    <%= will_paginate %>
+<div class="d-flex justify-content-center">
+  <%= will_paginate %>
 </div>
