--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,9 +76,9 @@ $nav-default-bg: black;
     
 }
 
-.pagination ul li {
-    padding-right: 5px;
-}
+//.pagination ul li {
+//    padding-right: 5px;
+//}
 
 .footer {
     margin-top: 45px;
