--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
 <div class="d-flex justify-content-center">
   <%= will_paginate %>
 </div>
-<%= render 'article', obj: @articles %>
+<%= render 'articles', obj: @articles %>
 <div class="d-flex justify-content-center">
   <%= will_paginate %>
 </div>
