--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,32 +1,34 @@
 <h2 align='center'>Title: <%= @article.title %></h2>
 
 <div class='card col-8 offset-2'>
-    <% if @article.user %>
-        <ul class='listing'>
-              <div class='row center'>
-                  <div class='col-4 offset-4'>
-                      <li>Created by:</li>
-                      <li>
-                          <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
-                      </li>
-                      <li>
-                          <%= link_to @article.user.username, user_path(@article.user) %>
-                      </li>
-                      <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
-                      </small></li>
-                  </div>
-              </div>
-        </ul>
-    <% end %>
-    <h4 class='center description'><strong>Description</strong></h4>
-    <hr>
-
-    <%= simple_format(@article.description) %>
+  <% if @article.user %>
+    <ul class='listing'>
+      <div class='row center'>
+        <div class='col-4 offset-4'>
+          <li>Created by:</li>
+          <li>
+            <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+          </li>
+          <li>
+            <%= link_to @article.user.username, user_path(@article.user) %>
+          </li>
+          <li>
+            <small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+            </small>
+          </li>
+        </div>
+      </div>
+    </ul>
+  <% end %>
+  <h4 class='center description'><strong>Description</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <% if logged_in? and (current_user == @article.user or current_user.is_admin) %>
     <div class='articles-actions'>
-        <%= link_to "Edit this article", edit_article_path(@article), class: 'btn btn-primary btn-xs' %>
-        <%= link_to "Delete this article", article_path(@article), method: :delete, 
-                                        data: {confirm: "Are you sure you want to delete the article?"}, 
-                                        class: 'btn btn-xs btn-danger' %>
-        <%= link_to "View all articles", articles_path, class: 'btn btn-xs btn-success' %>
+      <%= link_to "Edit this article", edit_article_path(@article), class: 'btn btn-primary btn-xs' %>
+      <%= link_to "Delete this article", article_path(@article), method: :delete,
+                  data: {confirm: "Are you sure you want to delete the article?"},
+                  class: 'btn btn-xs btn-danger' %>
     </div>
+  <% end %>
 </div>
