--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,39 +1,54 @@
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <%= link_to "Alpha Blog", root_path, class: "nav-link", id: "logo" %>
-  </li>
-  <% if logged_in? %>
-    <li class="nav-item">
-      <a>
-        <%= link_to "New Article", new_article_path, class: "nav-link" %>
-      </a>
-    </li>
-    <li class="nav-item">
-      <%= link_to "Articles", articles_path, class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to "Users", users_path, class: "nav-link" %>
-    </li>
-    <li>
-      <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %>
-    </li>
-    <div class="dropdown show float-right">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Your profile
-      </a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <%= link_to "Alpha Blog", root_path, class: "navbar-brand", id: "logo" %>
 
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item"><%= link_to "Edit your profile", edit_user_path(current_user) %></a>
-        <a class="dropdown-item"><%= link_to "View your profile", user_path(current_user) %></a>
-<!--        <a class="dropdown-item" href="#">Something else here</a>-->
-      </div>
-    </div>
-  <% else %>
-    <li>
-      <%= link_to "Log in", login_path, class: "nav-link" %>
-    </li>
-    <li>
-      <%= link_to "Sign up", signup_path, class: "nav-link" %>
-    </li>
-  <% end %>
-</ul>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+    <ul class="navbar-nav mr-auto">
+      <% if logged_in? %>
+        <li class="nav-item active">
+          <%= link_to "New Article", new_article_path, class: "nav-link" %>
+        </li>
+      <% end %>
+      <li class="nav-item">
+        <%= link_to "Articles", articles_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Users", users_path, class: "nav-link" %>
+      </li>
+    </ul>
+
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+    <% if logged_in? %>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %>
+        </li>
+        <li class="nav-item dropdown">
+
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.is_admin ? "Your profile" : "Your profile Admin" %>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item"><%= link_to "Edit your profile", edit_user_path(current_user) %></a>
+            <a class="dropdown-item"><%= link_to "View your profile", user_path(current_user) %></a>
+          </div>
+        </li>
+
+      </ul>
+    <% else %>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "Log in", login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign up", signup_path, class: "nav-link" %>
+        </li>
+      </ul>
+    <% end %>
+
+  </div>
+</nav>
