--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,26 @@
 <h1 align='center'>All Alpha Bloggers</h1>
 <div align='center'>
-  <%= will_paginate %>
-    <% @users.each do |user| %>
-      <ul class='listing'>
-          <div class='row'>
-              <div class='card col-4 offset-4'>
-                  <li>
-                      <%= link_to gravatar_for(user), user_path(user) %>
-                  </li>
-                  <li>
-                      <%= link_to user.username, user_path(user) %>
-                  </li>
-                  <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
-              </div>
-          </div>
-      </ul>
-    <% end %>
-  <%= will_paginate %>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate %>
+  </div>
+  <% @users.each do |user| %>
+    <ul class='listing'>
+      <div class='row'>
+        <div class='card col-4 offset-4'>
+          <li>
+            <%= link_to gravatar_for(user), user_path(user) %>
+          </li>
+          <li>
+            <%= link_to user.username, user_path(user) %>
+          </li>
+          <li>
+            <small><%= pluralize(user.articles.count, "article") if user.articles %></small>
+          </li>
+        </div>
+      </div>
+    </ul>
+  <% end %>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate %>
+  </div>
 </div>
